css and menu bar added

--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
 </head>
 <body>
     <div id="content">
-        <div class="menu" id="menu-bar">
-            <a href="index.html">Home</a>
-            <a href="staff.html">Staff</a>
-        </div>
+        <header>
+            <div class="menu" id="menu-bar">
+                <a href="index.html">Home</a>
+                <a href="staff.html">Staff</a>
+            </div>
+        </header>
+        <body>
+
+        </body>
     </div>
 </body>
 </html>
