Added Hero image and text

--- a/index.html
+++ b/index.html
@@ -10,8 +10,17 @@
     <div id="content">
         <header>
             <div class="menu" id="menu-bar">
-                <a href="index.html">Home</a>
-                <a href="staff.html">Staff</a>
+                <div class=""menu-content">
+                    <a href="index.html">Home</a>
+                    <a href="staff.html">Staff</a>
+                </div>
+            </div>
+            <div class="hero-section" id="hero-banner">
+                <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
+                <div class="text-overlay">
+                     <h1>Unlock Your Potential with Expert Mentorship</h1>
+                     <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
+                </div>
             </div>
         </header>
         <body>
