small changes to main content and css

--- a/index.html
+++ b/index.html
@@ -8,24 +8,30 @@
 </head>
 <body>
     <div id="content">
-        <header>
+        <nav>
             <div class="menu" id="menu-bar">
-                <div class=""menu-content">
+                <div class="menu-content">
                     <a href="index.html">Home</a>
                     <a href="staff.html">Staff</a>
                 </div>
             </div>
             <div class="hero-section" id="hero-banner">
                 <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
-                <div class="text-overlay">
+                <div id="text-overlay">
                      <h1>Unlock Your Potential with Expert Mentorship</h1>
                      <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
                 </div>
             </div>
-        </header>
-        <body>
-
-        </body>
+        </nav>
+        <section id="hero" class="hero">
+            <div id="main-content" class="main-content">
+                <h2>That's how we work</h2>
+                <p id="work_methods">   After getting in touch with us we will send you a question form to fill out. 
+                                        After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors with your stats to get the best results possible.
+                                        The next task then is on you. You can use our feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
+                                        So, why not try it out yourself
+                </p>
+        </section>
     </div>
 </body>
 </html>
