added content section, text, button and a footer

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Projektmanagement Mentoring</title>
+    <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
     <link rel="stylesheet" href="CSS/style.css" />
 </head>
 <body>
@@ -12,26 +13,36 @@
             <div class="menu" id="menu-bar">
                 <div class="menu-content">
                     <a href="index.html">Home</a>
-                    <a href="staff.html">Staff</a>
-                </div>
-            </div>
-            <div class="hero-section" id="hero-banner">
-                <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
-                <div id="text-overlay">
-                     <h1>Unlock Your Potential with Expert Mentorship</h1>
-                     <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
+                    <a href="sites/staff.html">Staff</a>
                 </div>
             </div>
         </nav>
+        <div class="hero-section" id="hero-banner">
+            <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
+            <div id="text-overlay">
+                <h1>Unlock Your Potential with Expert Mentorship</h1>
+                <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
+             </div>
+        </div>
         <section id="hero" class="hero">
             <div id="main-content" class="main-content">
                 <h2>That's how we work</h2>
                 <p id="work_methods">   After getting in touch with us we will send you a question form to fill out. 
                                         After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors with your stats to get the best results possible.
-                                        The next task then is on you. You can use our feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
-                                        So, why not try it out yourself
+                                        <br><br>The next task then is on you. You can use our swiping feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
+                                        <br><br>Try it out yourself.
+                    
                 </p>
+                <div class="buttonStuff">
+                        <button type="button"><a href="sites/form.html">Register here</a></button>
+                </div>
+            </div>
+        </section>
+        <section id="mentorBoxes" class="boxes">
+            <p>gzhiujioop</p>
+
         </section>
     </div>
 </body>
+<footer>&copy; 2025 Leon Lengert</footer>
 </html>
