started to work on mentor boxes; fixed spelling

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section id="hero" class="hero">
             <div id="main-content" class="main-content">
                 <h2>That's how we work</h2>
-                <p id="work_methods">   After getting in touch with us we will send you a question form to fill out. 
+                <p id="work_methods">   After getting in touch with us we will send you a questionaire to fill out. 
                                         After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors with your stats to get the best results possible.
                                         <br><br>The next task then is on you. You can use our swiping feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
                                         <br><br>Try it out yourself.
@@ -39,7 +39,9 @@
             </div>
         </section>
         <section id="mentorBoxes" class="boxes">
-            <p>gzhiujioop</p>
+            <div class="box">
+                
+            </div>
 
         </section>
     </div>
