--- a/sites/form.html
+++ b/sites/form.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Projektmanagement Mentoring</title>
+    <title>Questionaire</title>
     <link rel="stylesheet" href="../CSS/style.css" />
 </head>
 <body>
