new stuff. sieht scheiße aus, aber funktioniert erstmal etwas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Projektmanagement Mentoring</title>
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
     <link rel="stylesheet" href="CSS/style.css" />
+    <script src="JS/scripts.js"></script>
 </head>
 <body>
     <div id="content">
@@ -14,6 +15,7 @@
                 <div class="menu-content">
                     <a href="index.html">Home</a>
                     <a href="sites/staff.html">Staff</a>
+                    <a href="sites/winder.html">Winder here</a>
                 </div>
             </div>
         </nav>
@@ -34,15 +36,32 @@
                     
                 </p>
                 <div class="buttonStuff">
-                        <button type="button"><a href="sites/form.html">Register here</a></button>
+                        <button type="button"><a href="sites/register.html">Register here</a></button>
                 </div>
             </div>
         </section>
         <section id="mentorBoxes" class="boxes">
             <div class="box">
-                
+                <img src="graphics/mentor_1_transparent.png" alt="Portrait von Sarah">
+                <div class="box-content">
+                    <h3>Sarah Schmidt</h3>
+                    <p>Expert for agile project management with 10 years of experience in the tech industry.</p>
+                </div>
             </div>
-
+            <div class="box">
+                <img src="graphics/mentor_2_transparent.png" alt="Portrait von Michael">
+                <div class="box-content">
+                    <h3>Michael Müller</h3>
+                    <p>Specialist for risk management and strategic corporate planning.</p>
+                </div>
+            </div>
+            <div class="box">
+                <img src="graphics/mentor_3_transparent.png" alt="Portrait von Julia">
+                <div class="box-content">
+                    <h3>Julia Weber</h3>
+                    <p>Focus on soft skills and team leadership in international large-scale projects.</p>
+                </div>
+            </div>
         </section>
     </div>
 </body>
