--- a/sites/login.html
+++ b/sites/login.html
@@ -24,10 +24,15 @@
                 <input type="password" id="password" name="password" required />
 
                 <button type="submit" class="register-button">Login</button>
-                <button type="submit" class="register-button">Reset Password</button>
-                <button type="submit" class="register-button">Register</button>
+                <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                Password vergessen?
+                </button>
+                <button type="button" onclick="window.location.href='register.html'" class="register-button">
+                 Noch kein Konto? Registriere dich hier
+                </button>
             </form>
-        </div>>
+        </div>
     </div>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
