--- a/sites/register.html
+++ b/sites/register.html
@@ -30,9 +30,13 @@
                 <input type="password" id="password" name="password" required />
 
                 <button type="submit" class="register-button">Register</button>
-                <button type="submit" class="register-button">Already Registered? Login here</button>
+
+               <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                Bereits registriert? Login hier
+                </button>
             </form>
         </div>
     </div>
+    <script src="../JS/scripts.js"></script>
 </body>
 </html>
