--- a/sites/staff.html
+++ b/sites/staff.html
@@ -12,6 +12,7 @@
         <div class="menu" id="menu-bar">
             <a href="../index.html">Home</a>
             <a href="staff.html">Staff</a>
+            <a href="winder.html">Winder here</a>
         </div>
         </nav>
     </div>
