added  login and register to menu

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
                     <a href="index.html">Home</a>
                     <a href="sites/staff.html">Staff</a>
                     <a href="sites/winder.html">Winder here</a>
+                    <a href="sites/register.html">Register here</a>
+                    <a href="sites/login.html">Login here</a>
                 </div>
             </div>
         </nav>
