--- a/sites/register.html
+++ b/sites/register.html
@@ -9,10 +9,11 @@
 <body>
     <div id="content">
         <nav>
-        <div class="menu" id="menu-bar">
-            <!-- <a href="../index.html">Home</a>
-            <a href="staff.html">Staff</a> -->
-        </div>
+            <div class="menu" id="menu-bar">
+                <a href="../index.html">Home</a>
+                <!-- <a href="staff.html">Staff</a> -->
+                <!-- <a href="winder.html">Winder here</a> -->
+            </div>
         </nav>
         <div class="login-box">
             <h1> Register here</h1>
