--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div id="content">
+        <header>
         <nav>
             <div class="menu" id="menu-bar">
                 <div class="menu-content">
@@ -21,12 +22,11 @@
                 </div>
             </div>
         </nav>
+        </header>
         <div class="hero-section" id="hero-banner">
             <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
-            <div id="text-overlay">
-                <h1>Unlock Your Potential with Expert Mentorship</h1>
-                <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
-             </div>
+            <h1>Unlock Your Potential with Expert Mentorship</h1>
+            <p>Achieve your goals faster with personalized mentoring from industry professionals.</p>
         </div>
         <section id="hero" class="hero">
             <div id="main-content" class="main-content">
