--- a/sites/register.html
+++ b/sites/register.html
@@ -5,9 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Register</title>
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/loginStyle.css" />
 </head>
 <body>
     <div id="content">
+        <header>
         <nav>
             <div class="menu" id="menu-bar">
                 <a href="../index.html">Home</a>
@@ -15,6 +17,7 @@
                 <!-- <a href="winder.html">Winder here</a> -->
             </div>
         </nav>
+        </header>
         <div class="login-box">
             <h1> Register here</h1>
             <form id="register-form" action="#" method="post">
