--- a/sites/staff.html
+++ b/sites/staff.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div id="content">
+        <header>
         <nav>
         <div class="menu" id="menu-bar">
             <a href="../index.html">Home</a>
@@ -15,6 +16,7 @@
             <a href="winder.html">Winder here</a>
         </div>
         </nav>
+        </header>
     </div>
 </body>
 </html>
