- added header section for nav-menu - added stylesheet for the tinder-style feature

--- a/sites/winder.html
+++ b/sites/winder.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Login</title>
     <link rel="stylesheet" href="../CSS/style.css" />
+    <link rel="stylesheet" href="../CSS/winderStyle.css" />
+
 </head>
 <body>
     <div id="content">
+        <header>
         <nav>
             <div class="menu" id="menu-bar">
                 <a href="../index.html">Home</a>
@@ -15,6 +18,7 @@
                 <!-- <a href="winder.html">Winder here</a> -->
             </div>
         </nav>
+        </header>
         <section id="mentorBoxes" class="swipe-container">
             <div class="card-stack">
                 <div class="swipe-card" data-mentor="sarah">
