- login/register box centered

--- a/sites/login.html
+++ b/sites/login.html
@@ -18,23 +18,25 @@
             </div>
         </nav>
         </header>
-        <div class="login-box">
-            <h1> Login</h1>
-            <form id="login-form" action="#" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required />
+        <div class="box-wrapper">
+            <div class="login-box">
+                <h1> Login</h1>
+                <form id="login-form" action="#" method="post">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required />
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required />
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required />
 
-                <button type="submit" class="register-button">Login</button>
-                <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                Password vergessen?
-                </button>
-                <button type="button" onclick="window.location.href='register.html'" class="register-button">
-                 Noch kein Konto? Registriere dich hier
-                </button>
-            </form>
+                    <button type="submit" class="register-button">Login</button>
+                    <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Password vergessen?
+                    </button>
+                    <button type="button" onclick="window.location.href='register.html'" class="register-button">
+                    Noch kein Konto? Registriere dich hier
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="../JS/scripts.js"></script>
