--- a/sites/register.html
+++ b/sites/register.html
@@ -18,27 +18,29 @@
             </div>
         </nav>
         </header>
-        <div class="login-box">
-            <h1> Register here</h1>
-            <form id="register-form" action="#" method="post">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required />
+        <div class="box-wrapper">
+            <div class="login-box">
+                <h1> Register here</h1>
+                <form id="register-form" action="#" method="post">
+                    <label for="username">Username:</label>
+                    <input type="text" id="username" name="username" required />
 
-                <label for="email">Email:</label>
-                <input type="email" id="email" name="email" required />
+                    <label for="email">Email:</label>
+                    <input type="email" id="email" name="email" required />
 
-                <label for="email">Confirm your Email:</label>
-                <input type="email" id="email-Confirm" name="email" required />
+                    <label for="email">Confirm your Email:</label>
+                    <input type="email" id="email-Confirm" name="email" required />
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required />
+                    <label for="password">Password:</label>
+                    <input type="password" id="password" name="password" required />
 
-                <button type="submit" class="register-button">Register</button>
+                    <button type="submit" class="register-button">Register</button>
 
-               <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                Bereits registriert? Login hier
-                </button>
-            </form>
+                <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Bereits registriert? Login hier
+                    </button>
+                </form>
+            </div>
         </div>
     </div>
     <script src="../JS/scripts.js"></script>
