- udated function for mentor clicking

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/scripts.js"></script>
+    <script src="JS/mentorClick.js"></script>
 </head>
 <body>
     <div id="content">
@@ -43,21 +44,21 @@
             </div>
         </section>
         <section id="mentorBoxes" class="boxes">
-            <div class="box">
+            <div class="box" id="mentor1">
                 <img src="graphics/mentor_1_transparent.png" alt="Portrait von Sarah">
                 <div class="box-content">
                     <h3>Sarah Schmidt</h3>
                     <p>Expert for agile project management with 10 years of experience in the tech industry.</p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" id="mentor2">
                 <img src="graphics/mentor_2_transparent.png" alt="Portrait von Michael">
                 <div class="box-content">
                     <h3>Michael Müller</h3>
                     <p>Specialist for risk management and strategic corporate planning.</p>
                 </div>
             </div>
-            <div class="box">
+            <div class="box" id="mentor3">
                 <img src="graphics/mentor_3_transparent.png" alt="Portrait von Julia">
                 <div class="box-content">
                     <h3>Julia Weber</h3>
