--- a/sites/staff.html
+++ b/sites/staff.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Projektmanagement Mentoring</title>
     <link rel="stylesheet" href="../CSS/style.css" />
+    <script src="../JS/mentorClick.js"></script>
 </head>
 <body>
     <div id="content">
@@ -17,6 +18,29 @@
         </div>
         </nav>
         </header>
+        <section id="mentorBoxes" class="boxes">
+            <div class="box" id="mentor1">
+                <img src="../graphics/mentor_1_transparent.png" alt="Portrait von Sarah">
+                <div class="box-content">
+                    <h3>Sarah Schmidt</h3>
+                    <p>Expert for agile project management with 10 years of experience in the tech industry.</p>
+                </div>
+            </div>
+            <div class="box" id="mentor2">
+                <img src="../graphics/mentor_2_transparent.png" alt="Portrait von Michael">
+                <div class="box-content">
+                    <h3>Michael Müller</h3>
+                    <p>Specialist for risk management and strategic corporate planning.</p>
+                </div>
+            </div>
+            <div class="box" id="mentor3">
+                <img src="../graphics/mentor_3_transparent.png" alt="Portrait von Julia">
+                <div class="box-content">
+                    <h3>Julia Weber</h3>
+                    <p>Focus on soft skills and team leadership in international large-scale projects.</p>
+                </div>
+            </div>
+        </section>
     </div>
 </body>
 </html>
