Changed Menu style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
                     <a href="index.html">Home</a>
                     <a href="sites/staff.html">Staff</a>
                     <a href="sites/winder.html">Winder here</a>
-                    <a href="sites/register.html">Register here</a>
+                </div>
+                <div class="buttonStuffNav">
                     <a href="sites/login.html">Login here</a>
                 </div>
             </div>
@@ -36,7 +37,6 @@
                                         After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors with your stats to get the best results possible.
                                         <br><br>The next task then is on you. You can use our swiping feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
                                         <br><br>Try it out yourself.
-                    
                 </p>
                 <div class="buttonStuff">
                         <button type="button"><a href="sites/register.html">Register here</a></button>
