--- a/sites/winder.html
+++ b/sites/winder.html
@@ -13,9 +13,14 @@
         <header>
         <nav>
             <div class="menu" id="menu-bar">
-                <a href="../index.html">Home</a>
-                <a href="staff.html">Staff</a>
-                <!-- <a href="winder.html">Winder here</a> -->
+                <div class="menu-content">
+                    <a href="../index.html">Home</a>
+                    <a href="staff.html">Staff</a>
+                    <a href="winder.html">Winder here</a>
+                </div>
+                <div class="buttonStuffNav">
+                    <a href="login.html">Login here</a>
+                </div>
             </div>
         </nav>
         </header>
