--- a/sites/staff.html
+++ b/sites/staff.html
@@ -11,11 +11,16 @@
     <div id="content">
         <header>
         <nav>
-        <div class="menu" id="menu-bar">
-            <a href="../index.html">Home</a>
-            <a href="staff.html">Staff</a>
-            <a href="winder.html">Winder here</a>
-        </div>
+            <div class="menu" id="menu-bar">
+                <div class="menu-content">
+                    <a href="../index.html">Home</a>
+                    <a href="staff.html">Staff</a>
+                    <a href="winder.html">Winder here</a>
+                </div>
+                <div class="buttonStuffNav">
+                    <a href="login.html">Login here</a>
+                </div>
+            </div>
         </nav>
         </header>
         <section id="mentorBoxes" class="boxes">
