added different logins for mentors and mentees and different views depending on the thing you logged in as

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/scripts.js"></script>
-    <script src="JS/mentorClick.js"></script>
 </head>
 <body>
     <div id="content">
@@ -17,10 +16,11 @@
                 <div class="menu-content">
                     <a href="index.html">Home</a>
                     <a href="sites/staff.html">Staff</a>
-                    <a href="sites/winder.html">Winder here</a>
+                    <a id="winder-link" href="sites/winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
-                    <a href="sites/login.html">Login here</a>
+                    <a id="login-link"href="sites/login.html">Login</a>
+                    <a id="logout-link" href="index.html">Logout</a>
                 </div>
             </div>
         </nav>
@@ -39,7 +39,7 @@
                                         <br><br>Try it out yourself.
                 </p>
                 <div class="buttonStuff">
-                        <button type="button"><a href="sites/register.html">Register here</a></button>
+                    <button type="button"><a href="sites/register.html">Register here</a></button>
                 </div>
             </div>
         </section>
@@ -64,6 +64,9 @@
                     <h3>Julia Weber</h3>
                     <p>Focus on soft skills and team leadership in international large-scale projects.</p>
                 </div>
+            </div>
+            <div class="textBox"></div>
+                <h2> Want to become a Mentor yourself? <a href="sites/mentorRegister.html">Apply here</a></h2>
             </div>
         </section>
     </div>
