--- a/sites/login.html
+++ b/sites/login.html
@@ -18,7 +18,8 @@
                     <a href="winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
-                    <a href="login.html">Login here</a>
+                    <a id="login-link" href="login.html">Login</a>
+                    <a id="logout-link" href="../index.html">Logout</a>
                 </div>
             </div>
         </nav>
@@ -35,10 +36,13 @@
 
                     <button type="submit" class="register-button">Login</button>
                     <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                    Password vergessen?
+                    Forgot password?
                     </button>
                     <button type="button" onclick="window.location.href='register.html'" class="register-button">
-                    Noch kein Konto? Registriere dich hier
+                    No account yet? Register here
+                    </button>
+                    <button type="button" onclick="window.location.href='mentorLogin.html'" class="register-button">
+                    Are you a Mentor? Login here
                     </button>
                 </form>
             </div>
