--- a/sites/mentorRegister.html
+++ b/sites/mentorRegister.html
@@ -42,13 +42,13 @@
 
                     <button type="submit" class="register-button">Register</button>
 
-                <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                <button type="button" onclick="window.location.href='mentorLogin.html'" class="register-button">
                     Already have an account? Login here
                     </button>
                 </form>
             </div>
         </div>
     </div>
-    <script src="../JS/scripts.js"></script>
+    <script src="../JS/mentorAcc.js"></script>
 </body>
 </html>
