--- a/sites/staff.html
+++ b/sites/staff.html
@@ -6,6 +6,7 @@
     <title>Projektmanagement Mentoring</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <script src="../JS/mentorClick.js"></script>
+    <script src="../JS/scripts.js"></script>
 </head>
 <body>
     <div id="content">
@@ -18,7 +19,8 @@
                     <a href="winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
-                    <a href="login.html">Login here</a>
+                    <a id="login-link"href="login.html">Login</a>
+                    <a id="logout-link" href="../index.html">Logout</a>
                 </div>
             </div>
         </nav>
