--- a/sites/mentorLogin.html
+++ b/sites/mentorLogin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Register</title>
+    <title>Mentor-Login</title>
     <link rel="stylesheet" href="../CSS/style.css" />
     <link rel="stylesheet" href="../CSS/loginStyle.css" />
 </head>
@@ -18,7 +18,7 @@
                     <a href="winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
-                    <a id="login-link"href="login.html">Login</a>
+                    <a id="login-link" href="login.html">Login</a>
                     <a id="logout-link" href="../index.html">Logout</a>
                 </div>
             </div>
@@ -26,29 +26,28 @@
         </header>
         <div class="box-wrapper">
             <div class="login-box">
-                <h1> Register here</h1>
-                <form id="register-form" action="#" method="post">
+                <h1> Login</h1>
+                <form id="login-form" action="#" method="post">
                     <label for="username">Username:</label>
                     <input type="text" id="username" name="username" required />
-
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required />
-
-                    <label for="email">Confirm your Email:</label>
-                    <input type="email" id="email-Confirm" name="email" required />
 
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="password" required />
 
-                    <button type="submit" class="register-button">Register</button>
-
-                <button type="button" onclick="window.location.href='login.html'" class="register-button">
-                    Already have an account? Login here
+                    <button type="submit" class="register-button">Login</button>
+                    <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Forgot password?
+                    </button>
+                    <button type="button" onclick="window.location.href='mentorRegister.html'" class="register-button">
+                    No Mentor yet? Register here
+                    </button>
+                    <button type="button" onclick="window.location.href='login.html'" class="register-button">
+                    Are you a Mentee? Login here
                     </button>
                 </form>
             </div>
         </div>
     </div>
-    <script src="../JS/scripts.js"></script>
+    <script src="../JS/mentorAcc.js"></script>
 </body>
 </html>
