--- a/sites/mentors/mentorMuellerM.html
+++ b/sites/mentors/mentorMuellerM.html
@@ -19,7 +19,8 @@
                     <a href="../winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
-                    <a href="../login.html">Login here</a>
+                    <a id="login-link"href="../login.html">Login</a>
+                    <a id="logout-link" href="../../index.html">Logout</a>
                 </div>
             </div>
         </nav>
