--- a/sites/register.html
+++ b/sites/register.html
@@ -15,7 +15,7 @@
                 <div class="menu-content">
                     <a href="../index.html">Home</a>
                     <a href="staff.html">Staff</a>
-                    <a href="winder.html">Winder here</a>
+                    <a id="winder-link" href="winder.html">Winder here</a>
                 </div>
                 <div class="buttonStuffNav">
                     <a id="login-link"href="login.html">Login</a>
