--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,22 +9,25 @@
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/scripts.js"></script>
 </head>
+
 <body>
     <div id="content">
         <header>
-        <nav>
-            <div class="menu" id="menu-bar">
-                <div class="menu-content">
-                    <a href="index.html">Home</a>
-                    <a href="sites/staff.html">Staff</a>
-                    <a id="winder-link" href="sites/winder.html">Winder here</a>
+            <nav>
+                <div class="menu" id="menu-bar">
+                    <div class="menu-content">
+                        <a href="index.html">Home</a>
+                        <a href="sites/staff.html">Staff</a>
+                        <a id="winder-link" href="sites/winder.html">Winder here</a>
+                        <a id="form-link" href="sites/form.html">Questionaire</a>
+                        <a id="admin-corner" href="sites/admin.html">Admin Corner</a>
+                    </div>
+                    <div class="buttonStuffNav">
+                        <a id="login-link" href="sites/login.html">Login</a>
+                        <a id="logout-link" href="index.html">Logout</a>
+                    </div>
                 </div>
-                <div class="buttonStuffNav">
-                    <a id="login-link"href="sites/login.html">Login</a>
-                    <a id="logout-link" href="index.html">Logout</a>
-                </div>
-            </div>
-        </nav>
+            </nav>
         </header>
         <div class="hero-section" id="hero-banner">
             <img class="hero-image" src="graphics/Hero_banner_project.png" alt="Hero_banner">
@@ -33,10 +37,13 @@
         <section id="hero" class="hero">
             <div id="main-content" class="main-content">
                 <h2>That's how we work</h2>
-                <p id="work_methods">   After getting in touch with us we will send you a questionaire to fill out. 
-                                        After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors with your stats to get the best results possible.
-                                        <br><br>The next task then is on you. You can use our swiping feature to swipe left and right on different Mentors that you seem fitting to yourself. Let it be looks, skills or even  experiences that target your unconscious mind. 
-                                        <br><br>Try it out yourself.
+                <p id="work_methods"> After getting in touch with us we will send you a questionaire to fill out.
+                    After completion an evolutionary AI algorithm scans your results and starts comparing our Mentors
+                    with your stats to get the best results possible.
+                    <br><br>The next task then is on you. You can use our swiping feature to swipe left and right on
+                    different Mentors that you seem fitting to yourself. Let it be looks, skills or even experiences
+                    that target your unconscious mind.
+                    <br><br>Try it out yourself.
                 </p>
                 <div class="buttonStuff">
                     <button type="button"><a href="sites/register.html">Register here</a></button>
@@ -66,10 +73,11 @@
                 </div>
             </div>
             <div class="textBox"></div>
-                <h2> Want to become a Mentor yourself? <a href="sites/mentorRegister.html">Apply here</a></h2>
-            </div>
-        </section>
+            <h2> Want to become a Mentor yourself? <a href="sites/mentorRegister.html">Apply here</a></h2>
+    </div>
+    </section>
     </div>
 </body>
 <footer>&copy; 2025 Leon Lengert</footer>
+
 </html>
