--- a/sites/register.html
+++ b/sites/register.html
@@ -16,6 +16,8 @@
                     <a href="../index.html">Home</a>
                     <a href="staff.html">Staff</a>
                     <a id="winder-link" href="winder.html">Winder here</a>
+                    <a id="form-link" href="form.html">Questionaire</a>
+                    <a id="admin-corner" href="admin.html">Admin Corner</a>
                 </div>
                 <div class="buttonStuffNav">
                     <a id="login-link"href="login.html">Login</a>
