re added the click function

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <!-- @import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap'); -->
     <link rel="stylesheet" href="CSS/style.css" />
     <script src="JS/scripts.js"></script>
+    <script src="JS/mentorClick.js"></script>
 </head>
 
 <body>
