made a good cahnge

--- a/sites/winder.html
+++ b/sites/winder.html
@@ -29,7 +29,7 @@
         </header>
         <section id="mentorBoxes" class="swipe-container">
             <div class="card-stack">
-                <div class="swipe-card" data-mentor="schmidtS">
+                <div class="swipe-card" data-mentor="SchmidtS">
                     <img src="../graphics/mentor_1_transparent.png" alt="Sarah">
                     <div class="card-info">
                         <h3>Sarah Schmidt</h3>
