--- a/sites/mentorLogin.html
+++ b/sites/mentorLogin.html
@@ -17,6 +17,7 @@
                     <a href="staff.html">Staff</a>
                     <a id="winder-link" href="winder.html">Winder here</a>
                     <a id="form-link" href="form.html">Questionaire</a>
+                    <a href="checklist.html">CV Checklist</a>
                 </div>
                 <div class="buttonStuffNav">
                     <a id="login-link" href="login.html">Login</a>
