--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <a id="winder-link" href="sites/winder.html">Winder here</a>
                         <a id="form-link" href="sites/form.html">Questionaire</a>
                         <a id="admin-corner" href="sites/admin.html">Admin Corner</a>
+                        <a href="sites/checklist.html">CV Checklist</a>
                     </div>
                     <div class="buttonStuffNav">
                         <a id="login-link" href="sites/login.html">Login</a>
