--- a/sites/checklist.html
+++ b/sites/checklist.html
@@ -18,6 +18,7 @@
             <a id="winder-link" href="winder.html">Winder here</a>
             <a id="form-link" href="form.html">Questionaire</a>
             <a id="admin-corner" href="admin.html">Admin Corner</a>
+            <a href="checklist.html">CV Checklist</a>
           </div>
           <div class="buttonStuffNav">
             <a id="login-link" href="login.html">Login</a>
